--- a/includes/header.html
+++ b/includes/header.html
@@ -1,3 +1,6 @@
+<!-- <link rel="stylesheet" href="../assets/css/header.css"> -->
+<link rel="stylesheet" href="../assets/css/header.css">
+
 <header>
   <div class="header-content">
     <a href="index.html"
@@ -61,7 +64,7 @@
         </div>
       </div>
 
-      <a href="../forns/contact-us.html">Contact Us</a>
+      <a href="../forns/contact-us.html"i class="contact-btn">Contact Us</a>
     </nav>
   </div>
 </header>
