Update website content

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-main">
       <div class="footer-logo-left">
         <a href="index.html" class="footer-logo-link">
-          <img src="assets/images/logo.png" alt="Dachshund" class="footer-dog-silhouette">
+          <img src="/assets/images/logo.png" alt="Dachshund" class="footer-dog-silhouette">
           <div class="footer-name-stack">
             <span class="footer-name">River Dachs</span>
             <span class="footer-subtitle">MINIATURE DACHSHUNDS</span>
@@ -12,20 +12,20 @@
       </div>
       <div class="footer-social">
         <a href="#" title="Facebook">
-          <img class="social-icon" src="assets/social/Facebook_Logo_Primary.png" alt="Facebook">
+          <img class="social-icon" src="/assets/social/Facebook_Logo_Primary.png" alt="Facebook">
         </a>
         <a href="#" title="Instagram">
-          <img class="social-icon" src="assets/social/Instagram_Glyph_Gradient.png" alt="Instagram">
+          <img class="social-icon" src="/assets/social/Instagram_Glyph_Gradient.png" alt="Instagram">
         </a>
         <a href="#" title="TikTok">
-          <img class="social-icon" src="assets/social/TikTok_Icon_Black_Circle.png" alt="TikTok">
+          <img class="social-icon" src="/assets/social/TikTok_Icon_Black_Circle.png" alt="TikTok">
         </a>
       </div>
 
       <div class="footer-nav-links">
-        <a href="forms/contact-us.html">Contact Us</a>
-        <a href="docs/privacy-policy.html">Privacy Policy</a>
-        <a href="docs/terms-of-use.html">Terms of Use</a>
+        <a href="/forms/contact-us.html">Contact Us</a>
+        <a href="/docs/privacy-policy.html">Privacy Policy</a>
+        <a href="/docs/terms-of-use.html">Terms of Use</a>
       </div>
     </div>
 
