--- a/includes/header.html
+++ b/includes/header.html
@@ -15,9 +15,9 @@
 <header>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <div class="header-content">
-    <a href="index.html"
+    <a href="/index.html"
        style="text-decoration: none; display: flex; align-items: center; gap: 0.2rem;">
-      <img src="assets/images/logo.png" alt="Chocolate and Tan Shorthaired Miniature Dachshund Logo" class="header-dog-silhouette">
+      <img src="/assets/images/logo.png" alt="Chocolate and Tan Shorthaired Miniature Dachshund Logo" class="header-dog-silhouette">
       <div class="header-name-stack">
         <span class="header-name">River Dachs</span>
         <span class="header-subtitle">MINIATURE DACHSHUNDS</span>
